--- a/style.css
+++ b/style.css
@@ -41,6 +41,9 @@ nav li a{
   height: auto;
   width: 25vw;
   border-radius: 50%;
+  border: 2px solid black;
+  outline: 2px solid black;
+  outline-offset: 4px;
 }
 
 h1{
