--- a/style.css
+++ b/style.css
@@ -7,13 +7,36 @@
 /* IMPORTS */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
+/* VARIABLES */
+:root {
+    --LIGHT-COLOR: #EDF2F4;
+    --DARK-COLOR: #2B2D42;
+    --DARK-BACKGROUND: #2B2D42;
+    --LIGHT-BACKGROUND: #8D99AE;
+    --DARK-BORDER: 2px solid var(var(--DARK-BORDER));
+    scroll-behavior: smooth;
+}
+
+/* Generic Classes */
+.text-center {
+    text-align: center;
+}
+
+.flex-row {
+    display: flex;
+}
+
+.flex-col {
+    display: flex;
+    flex-direction: column;
+}
+
 /* INITIAL */
 body {
     font-family: "Roboto", sans-serif;
     font-optical-sizing: auto;
     height: 100vh;
-    scroll-behavior: smooth;
-    background-color: #8D99AE;
+    background-color: var(--LIGHT-BACKGROUND);
 }
 
 nav ul {
@@ -23,7 +46,7 @@ nav ul {
 }
 
 nav ul li a {
-    color: #EDF2F4;
+    color: var(--LIGHT-COLOR);
 }
 
 main {
@@ -31,20 +54,24 @@ main {
     display: flex;
     flex-direction: column;
 }
- 
-header, footer {
-    background-color: #2B2D42;
-    color: #EDF2F4;
+
+header,
+footer {
+    background-color: var(--DARK-BACKGROUND);
+    color: var(--LIGHT-COLOR);
 }
-header h1,footer{
+
+header h1,
+footer {
     font-size: 2rem;
     padding: 30px;
 }
+
 /* IDS */
-#hero-section{
+#hero-section {
     width: 100%;
     height: 50vh;
-    color: #EDF2F4;
+    color: var(--LIGHT-COLOR);
     background-image: url(./images/3rago.jpeg);
     background-size: cover;
     background-position: center center;
@@ -53,22 +80,10 @@ header h1,footer{
     align-items: center;
 }
 
-#hero-section h2{
+#hero-section h2 {
     font-size: 2rem;
-    text-shadow: 2px 2px 2px #2B2D42;
+    text-shadow: 2px 2px 2px var(--DARK-BORDER);
     text-transform: uppercase;
-}
-
-/* Generic Classes */
-.text-center{
-    text-align: center;
-}
-.flex-row{
-    display: flex;
-}
-.flex-col{
-    display: flex;
-    flex-direction: column;
 }
 
 .card-container {
@@ -78,22 +93,24 @@ header h1,footer{
     gap: 30px;
 }
 
-.card-container div{
-    border: 2px solid black;
+.card-container div {
+    border: var(--DARK-BORDER);
     border-radius: 5px;
     padding: 30px;
-    background-color: #EDF2F4;
-    color: #2B2D42;
+    background-color: var(--LIGHT-COLOR);
+    color: var(--DARK-BORDER);
 }
-.card-container img{
+
+.card-container img {
     object-fit: cover;
     object-position: top;
     border-radius: 50%;
-    outline: 2px solid #2B2D42;
+    outline: var(--DARK-BORDER);
     outline-offset: 2px;
-    border: 2px solid #2B2D42;
+    border: var(--DARK-BORDER);
     margin-bottom: 20px;
 }
-.card-container h2{
+
+.card-container h2 {
     text-align: center;
 }
