--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     --DARK-COLOR: #2B2D42;
     --DARK-BACKGROUND: #2B2D42;
     --LIGHT-BACKGROUND: #8D99AE;
-    --DARK-BORDER: 2px solid var(var(--DARK-BORDER));
+    --DARK-BORDER: 2px solid var(var(--DARK-COLOR));
     scroll-behavior: smooth;
 }
 
